<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:fillViewport="true"
    tools:context=".registration"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_pressed"
            android:fontFamily="@font/sf2"
            android:onClick="goCreate"
            android:text="@string/register"
            android:textColor="#10677A"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgButton" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sf4"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#10677A"

            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_pressed"
            android:fontFamily="@font/sf4"
            android:onClick="showGoogle"
            android:text="@string/Google"
            android:textColor="#10677A"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_pressed"
            android:fontFamily="@font/sf4"
            android:onClick="showFacebook"
            android:text="@string/Facebook"
            android:textColor="#10677A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <TextView
            android:id="@+id/donthaveAccount3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sf5"
            android:onClick="goBack"
            android:text="@string/auth"
            android:textColor="#10677A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button8"
            app:layout_constraintVertical_bias="0.88" />

        <TextView
            android:id="@+id/iagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/agree"
            android:fontFamily="@font/sf4"
            android:textColor="#10677A"
            app:layout_constraintStart_toEndOf="@+id/imgButton"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <ImageButton
            android:id="@+id/imgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/iagree"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:srcCompat="@drawable/cb" />

        <TextView
            android:id="@+id/idLogin3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sf2"
            android:text="@string/registr"
            android:textColor="#10677A"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintBottom_toTopOf="@+id/imgButton"
            app:layout_constraintTop_toBottomOf="@id/idLogin3"
            tools:layout_editor_absoluteX="-3dp">

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/backgroundtext"
                android:fontFamily="@font/sf4"
                android:hint="@string/fullname"
                android:textColor="#10677A"
                android:onClick="goBack"
                app:layout_constraintBottom_toTopOf="@+id/etEmailPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.48000002" />

            <EditText
                android:id="@+id/etEmailPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#10677A"
                android:layout_marginBottom="5dp"
                android:background="@drawable/backgroundtext"
                android:fontFamily="@font/sf4"
                android:hint="@string/firstfield"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullname" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/backgroundtext"
                android:ems="5"
                android:textColor="#10677A"
                android:fontFamily="@font/sf4"
                android:hint="@string/secondfield"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/confirmpassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailPhone"
                app:layout_goneMarginTop="25dp" />


            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/backgroundtext"
                android:ems="5"
                android:fontFamily="@font/sf4"
                android:textColor="#10677A"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:onClick="visiblePassword"
                app:layout_constraintBottom_toBottomOf="@+id/password"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintTop_toTopOf="@+id/password"
                app:srcCompat="@drawable/eyeslash" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:onClick="confirmPasword"
                app:layout_constraintBottom_toBottomOf="@+id/confirmpassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/confirmpassword"
                app:srcCompat="@drawable/eyeslash" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>